--- a/seguridad.html
+++ b/seguridad.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-  <title>Genesys Informatica | Infraestructura</title>
+  <title>Genesys Informatica | Seguridad</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="keywords" content="Casita a Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -26,7 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <link rel="icon" href="./images/Logotipo Genesys Solo Abaco.png">
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
-  <link href="css/infraestructura.css" rel='stylesheet' type='text/css' />
+  <link rel="stylesheet" href="css/seguridad.css">
   <link href="css/fontawesome-all.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 </head>
@@ -51,8 +51,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <ul class="navbar-nav">
 
                 <li><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                <li class="nav-item active"><a class="nav-link text-uppercase" href="infraestructura.html">Infraestructura</a></li>
-                <li class="nav-item dropdown">
+                <li class="nav-item"><a class="nav-link text-uppercase" href="infraestructura.html">Infraestructura</a></li>
+                <li class="nav-item dropdown active">
                   <a class="nav-link text-uppercase dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button"
                     aria-haspopup="true" aria-expanded="false">
                     Servicios <i class="fas fa-caret-down"></i>
@@ -68,7 +68,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </li>
                 <li><a class="nav-link text-uppercase" href="about.html">Nosotros</a></li>
                 <li><a class="nav-link text-uppercase" href="contact.html">Contacto</a></li>
-
               </ul>
               <!-- <div class="top-info text-left">
                 <ul>
@@ -87,85 +86,116 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //header-top-->
   </section>
   <!-- //mian-content-->
-
-  <!-- /Infeaestructura-->
-  <section class="banner-bottom py-lg-5 py-md-5 py-3">
+  <!-- /Contact-->
+  <section class="banner-bottom py-lg-5 py-md-5 py-3" id="services">
     <div class="container">
       <div class="inner-sec py-lg-5 py-3">
-
-        <div class="row middle-grids">
-
-          <div class="col-lg-3 advantage-grid-info1 d-flex">
-            <div class="text-center align-self-center">
-              <img src="./images/lenovo-bp.jpg" class="img-fluid lenovo-bp" alt="lenovo business partner">
+        <h3 class="tittle text-center mb-md-5 mb-4">Software de Seguridad</h3>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-8 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">Cloud Antivirus</h4>
+              <h3>Panda Security</h3>
+              <p class="mt-2">Un sistema total y centralizado para proteger y gestionar tus equipos, desde una consola
+                en la nube podrás tener tus equipos protegidos, con diversas configuraciones de firewall, antivirus y
+                control de dispositivos de entrada, un sistema anti-ejecución  con el cual previenes se ejecute
+                software malicioso o bien controlar lo que se puede ejecutar, monitorea los equipos, gestiona
+                inventario del dispositivo y da soporte de conexión remota con sistemas de tikets, programa
+                actualizaciones y parches, compatible con, Windows, Windows server, Mac OS, Linux, iOS y Android.</p>
             </div>
           </div>
-
-          <div class="col-lg-6 advantage-grid-info pt-md-3">
+          <div class="col-lg-4 advantage-grid-info1 d-flex">
+            <div class="advantage_left1 text-center align-self-center">
+              <img src="./images/panda-logo.png" class="img-fluid" alt="panda security logo">
+            </div>
+          </div>
+        </div>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-4 advantage-grid-info1 d-flex">
+            <div class="advantage_left1 text-center align-self-center">
+              <img src="https://lh3.googleusercontent.com/ksYLy9sPDmG7YMt1LNUgoBEkyOuDa_J6mesm4k7mzydvfc-cZhnSNlmTbQrRNPH9BUV-8mZeLjrKS8VmojNZUB6sho5HKUWK578UT2dhLnBxlnMS4P9UWTTEQcmu_BE3GWzmwyKJ4LM=w2400"
+                class="img-fluid" alt="">
+            </div>
+          </div>
+          <div class="col-lg-8 advantage-grid-info pt-md-5">
             <div class="advantage_left">
-              <!-- <h4 class="mb-2">SAI</h4> -->
-              <h3>Infraestructura</h3>
-              <hr>
+              <h4 class="mb-2">MDM con MaaS360 o Sophos</h4>
+              <h3>Genesys Mobile</h3>
+              <p class="mt-2">Toda la administración y control de dispositivos móviles para su empresa, en una consola
+                en la nube se puede tomar el control total o parcial de un dispositivo, contando con funciones como
+                elaboración de políticas que evitan el uso inadecuado del dispositivo restringiendo aplicaciones o
+                funciones, configuraciones de correo, VPN, contraseñas y accesos a la red de la empresa, rastreo e
+                historial de ubicación dispositivo, control de gastos y distribución de aplicaciones y documentos. <br><br>
+                También de manera adicional podrá tener un ambiente de trabajo controlado y aislado del contenido del
+                dispositivo para evitar fugas de información y gestionar de manera segura los documentos y aplicaciones
+                de la empresa, compatible con iOS y Android.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-8 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">Security Intelligence</h4>
+              <h3>IBM QRadar</h3>
               <p class="mt-2">
-                Basados en tecnología IBM y Lenovo, ofrecemos soluciones enfocadas a contribuir con la optimización de
-                las operaciones de nuestros clientes, ofreciendo servicios de Venta de equipos, servicios de asesoría y
-                soporte, análisis de requerimientos y dimensionamiento de infraestructura central, consolidación y
-                virtualización de servicios (aplicaciones) en diferentes plataformas operativas.
+                Correlaciona toda la información, para tener una amplia visión de todo lo que ocurre en la
+                infraestructura de tu empresa, enlaza tus sistemas ya sean de seguridad, accesos, monitoreo o
+                cualquiera que sea de importancia tenerlo en constante supervisión, crea reglas de alertas para
+                detectar cualquier amenaza latente entre todas sus soluciones.
+                <br><br>
+                No importa en que parte estén físicamente los equipos que alojan a tus sistemas, enlaza y unifica la
+                información en una sola consola.
               </p>
             </div>
           </div>
-          <div class="col-lg-3 advantage-grid-info1 d-flex">
-            <div class="text-center align-self-center">
-              <img src="./images/ibm-bp.png" class="img-fluid ibm-bp" alt="ibm business partner">
+          <div class="col-lg-4 advantage-grid-info1 d-flex">
+            <div class="advantage_left1 text-center align-self-center">
+              <img src="./images/Qradar-logo.png" class="img-fluid" alt="qradar logo">
             </div>
           </div>
-
         </div>
-
-      </div>
-    </div>
-  </section>
-  <!-- //Infeaestructura-->
-
-  <!-- /Servidores-->
-  <section class="choose py-5">
-    <div class="container py-md-4 mt-md-3">
-      <div class="row inner_w3l_agile_grids-1 ">
-        <div class="col-lg-7 w3layouts_choose_left_grid1">
-          <div class="choose_top">
-            <h3 class="w3l_header text-white">Servidores</h3>
-            <!-- <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4> -->
-            <h4 class="mb-3 mt-3 text-white">Contacta a Nuestros Asesores Tecnicos</h4>
-            <!-- <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
-                at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
-                egestas vestibulum tellus.</p> -->
-            <p class="text-white">
-              Como parte de los productos que ofrecemos están:
-            </p>
-            <ul class="ml-3">
-              <li class="text-white">
-                Servidores System X y Bladecenter
-                (Soluciones basadas en ambientes Windows, Linux).
-              </li>
-              <li class="text-white">
-                Servidores System Power (Soluciones basadas en ambientes AIX, Linux e iOS).
-              </li>
-              <li class="text-white">
-                IBM Security Network Intrusion Prevention System, Solución para protección de la infraestructura de
-                ataques mediante el módulo análisis de protocolos (PAM) en tiempo real.
-              </li>
-            </ul>
-            <p class="text-white mt-2">
-              Soluciones de Virtualización de ambientes operativos, ya sea para computo central, como escritorios
-              virtuales (VMware, Citrix, HyperV, Terminales Thin client)
-            </p>
-            <a href="servicios.html" class="btn btn-primary mt-3">Servicios</a>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-4 advantage-grid-info1 d-flex">
+            <div class="advantage_left1 text-center align-self-center">
+              <img src="./images/guardium-logo.png" class="img-fluid" alt="Guardium Logo">
+            </div>
+          </div>
+          <div class="col-lg-8 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">Data Protection</h4>
+              <h3>IBM Security Guardium</h3>
+              <p class="mt-2">
+                IBM Guardium previene fugas de información de bases de datos, almacenes de datos y entornos de Big
+                Data; asegura la integridad de la información y automatiza el control de cumplimiento de normas en
+                entornos heterogéneos. IBM Security Guardium está diseñado para ayudar a salvaguardar datos críticos. 
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row middle-grids pt-lg-5">
+          <div class="col-lg-8 advantage-grid-info pt-md-5">
+            <div class="advantage_left">
+              <h4 class="mb-2">IBM Tivoli</h4>
+              <h3>Identity Manager</h3>
+              <p class="mt-2">
+                Múltiples soluciones para diversas tareas de los usuarios suelen representar pérdida de tiempo y
+                descontrol de accesos y permisos, con un Single Sing ON, los usuarios podrán acceder a sus sistemas en
+                un simple paso, y el administrador podrá brindar de permisos y privilegios a cada uno de los usuarios,
+                unificando a si todos los accesos, adicionalmente podrá monitorear el comportamiento de acceso y crear
+                reglas conforme a la situación que se pudieran presentar para una mayor seguridad.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 advantage-grid-info1 d-flex">
+            <div class="advantage_left1 text-center align-self-center">
+              <img src="https://lh3.googleusercontent.com/bcizaK7vtOs1sRTfSf4wd3Z3pks6f6CF8nc_t7IdWXSzsPeKNTv8gZ8W-OUprOTuHz4eEdrfUhC11vXCjgTAEfRVZZe9Gh1bjFTzgIyJGNeZRPKV6Sda5ZsPsW6hzmMcgb4flGW9tGY=w2400"
+                class="img-fluid" alt="">
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- //Servidores-->
 
   <!--/newsletter-->
   <footer class="newsletter_right pymd-5 py-4" id="footer">
@@ -239,6 +269,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div> -->
   <!--//newsletter-->
 
+  <!--//model-form-->
   <!-- js -->
   <script src="js/jquery-2.2.3.min.js"></script>
   <script>
@@ -268,6 +299,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
   </script>
   <!-- //dropdown nav -->
+
+  <!-- password-script -->
+  <!-- <script>
+    window.onload = function () {
+      document.getElementById("password1").onchange = validatePassword;
+      document.getElementById("password2").onchange = validatePassword;
+    }
+
+    function validatePassword() {
+      var pass2 = document.getElementById("password2").value;
+      var pass1 = document.getElementById("password1").value;
+      if (pass1 != pass2)
+        document.getElementById("password2").setCustomValidity("Passwords Don't Match");
+      else
+        document.getElementById("password2").setCustomValidity('');
+      //empty string means no validation error
+    }
+
+  </script> -->
+  <!-- //password-script -->
 
   <!--/ start-smoth-scrolling -->
   <script src="js/move-top.js"></script>
