--- a/infraestructura.html
+++ b/infraestructura.html
@@ -130,12 +130,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <!-- /Servidores-->
   <section class="choose py-5">
     <div class="container py-md-4 mt-md-3">
-      <div class="row inner_w3l_agile_grids-1 ">
+      <div class="row inner_w3l_agile_grids-1">
+        <!-- texto -->
         <div class="col-lg-7 w3layouts_choose_left_grid1">
           <div class="choose_top">
             <h3 class="w3l_header text-white">Servidores</h3>
+            <hr>
             <!-- <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4> -->
-            <h4 class="mb-3 mt-3 text-white">Contacta a Nuestros Asesores Tecnicos</h4>
+            <!-- <h4 class="mb-3 mt-3 text-white">Contacta a Nuestros Asesores Tecnicos</h4> -->
             <!-- <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                 at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum in,
                 egestas vestibulum tellus.</p> -->
@@ -159,13 +161,71 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               Soluciones de Virtualización de ambientes operativos, ya sea para computo central, como escritorios
               virtuales (VMware, Citrix, HyperV, Terminales Thin client)
             </p>
-            <a href="servicios.html" class="btn btn-primary mt-3">Servicios</a>
+            <!-- <a href="servicios.html" class="btn btn-primary mt-3">Servicios</a> -->
           </div>
+        </div>
+        <!-- Logos de OS -->
+        <div class="col-lg-5 d-flex flex-wrap ">
+          <img class="logo align-self-center" src="./images/windows-logo.png" alt="Windows Logo">
+          <img class="logo align-self-center" src="./images/vmware-logo.png" alt="Vmware Logo">
+          <img class="logo align-self-center" src="./images/aix-logo.png" alt="AIX Logo">
+          <img class="logo align-self-center" src="./images/linux-logo.png" alt="Linux Logo">
         </div>
       </div>
     </div>
   </section>
   <!-- //Servidores-->
+
+  <!-- /Storage-->
+  <section class="banner-bottom py-lg-5 py-md-5 py-3">
+    <div class="container">
+      <div class="inner-sec py-lg-5 py-3">
+
+        <div class="row middle-grids">
+
+          <div class="col-lg-3 advantage-grid-info1 d-flex">
+            <div class="text-center align-self-center">
+              <img src="./images/puredata.jpg" class="img-fluid lenovo-bp" alt="IBM Pure Data">
+            </div>
+          </div>
+
+          <div class="col-lg-6 advantage-grid-info pt-md-3 mt-3">
+            <div class="advantage_left">
+              <!-- <h4 class="mb-2">SAI</h4> -->
+              <h3>Storage</h3>
+              <hr>
+              <h4>Soluciones de Almacenamiento:</h4>
+              <!-- <p class="mt-2">
+                Basados en tecnología IBM y Lenovo, ofrecemos soluciones enfocadas a contribuir con la optimización de
+                las operaciones de nuestros clientes, ofreciendo servicios de Venta de equipos, servicios de asesoría y
+                soporte, análisis de requerimientos y dimensionamiento de infraestructura central, consolidación y
+                virtualización de servicios (aplicaciones) en diferentes plataformas operativas.
+              </p> -->
+              <ul class="ml-3 my-3">
+                <li>Disco: Soluciones tipo NAS o SAN, Virtualización de Alamcenamiento</li>
+                <li>Soluciones para Recuperación de Información: Cintas LTO, Librerías LTO y Librerias Virtuales (VTL)</li>
+              </ul>
+              <h4>
+                Servidores Integrados IBM Pure:
+              </h4>
+              <ul class="ml-3 my-3">
+                <li>Soluciones integradas de HW, SW y Middleware (Pure Flex, Pure Application y Pure Data)</li>
+              </ul>
+
+            </div>
+          </div>
+          <div class="col-lg-3 advantage-grid-info1 d-flex">
+            <div class="text-center align-self-center">
+              <img src="./images/pureflex-scaled.jpg" class="img-fluid ibm-bp" alt="IBM Pure Flex">
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- //Storage-->
 
   <!--/newsletter-->
   <footer class="newsletter_right pymd-5 py-4" id="footer">
