--- a/seguridad.html
+++ b/seguridad.html
@@ -113,8 +113,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="row middle-grids pt-lg-5">
           <div class="col-lg-4 advantage-grid-info1 d-flex">
             <div class="advantage_left1 text-center align-self-center">
-              <img src="https://lh3.googleusercontent.com/ksYLy9sPDmG7YMt1LNUgoBEkyOuDa_J6mesm4k7mzydvfc-cZhnSNlmTbQrRNPH9BUV-8mZeLjrKS8VmojNZUB6sho5HKUWK578UT2dhLnBxlnMS4P9UWTTEQcmu_BE3GWzmwyKJ4LM=w2400"
-                class="img-fluid" alt="">
+              <img src="./images/maas.png" class="img-fluid" alt="">
             </div>
           </div>
           <div class="col-lg-8 advantage-grid-info pt-md-5">
@@ -188,8 +187,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
           <div class="col-lg-4 advantage-grid-info1 d-flex">
             <div class="advantage_left1 text-center align-self-center">
-              <img src="https://lh3.googleusercontent.com/bcizaK7vtOs1sRTfSf4wd3Z3pks6f6CF8nc_t7IdWXSzsPeKNTv8gZ8W-OUprOTuHz4eEdrfUhC11vXCjgTAEfRVZZe9Gh1bjFTzgIyJGNeZRPKV6Sda5ZsPsW6hzmMcgb4flGW9tGY=w2400"
-                class="img-fluid" alt="">
+              <img src="./images/ibm-security.jpg" class="img-fluid" alt="">
             </div>
           </div>
         </div>
