aligned tivoli image

--- a/seguridad.html
+++ b/seguridad.html
@@ -185,7 +185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </p>
             </div>
           </div>
-          <div class="col-lg-4 advantage-grid-info1 d-flex">
+          <div class="col-lg-4 advantage-grid-info1 d-flex justify-content-center">
             <div class="advantage_left1 text-center align-self-center">
               <img src="./images/ibm-security.jpg" class="img-fluid" alt="">
             </div>
