modified services fa icons

--- a/servicios.html
+++ b/servicios.html
@@ -27,7 +27,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <link href="css/style.css" rel='stylesheet' type='text/css' />
   <link href="css/servicios.css" rel="stylesheet" type='text/css'>
-  <link href="css/fontawesome-all.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800" rel="stylesheet">
 </head>
 
@@ -97,9 +98,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="col-lg-4 about-in text-center">
             <div class="card">
               <div class="card-body">
-                <i class="fas fa-key mb-4"></i>
+                <i class="fas fa-print mb-4"></i>
                 <h5 class="card-title">Impresion</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p> -->
                 <a href="impresion.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
@@ -109,8 +110,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="card">
               <div class="card-body">
                 <i class="fas fa-building mb-4"></i>
-                <h5 class="card-title">Instalaciones Fisicas en Sitio</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <h5 class="card-title">Instalaciones Fisicas de Data Centers</h5>
+                <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p> -->
                 <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
@@ -119,9 +120,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="col-lg-4 about-in text-center">
             <div class="card">
               <div class="card-body">
-                <i class="fas fa-map-marker mb-4"></i>
+                <i class="fas fa-server mb-4"></i>
                 <h5 class="card-title">Vmware</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p> -->
                 <a href="vmware.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
@@ -130,9 +131,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="col-lg-4 about-in mt-lg-4 text-center">
             <div class="card">
               <div class="card-body">
-                <i class="fas fa-building mb-4"></i>
+                <i class="fas fa-database mb-4"></i>
                 <h5 class="card-title">AIX / Linux</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p> -->
                 <a href="aix.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
@@ -141,9 +142,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="col-lg-4 about-in mt-lg-4 text-center">
             <div class="card">
               <div class="card-body">
-                <i class="fas fa-map-marker mb-4"></i>
-                <h5 class="card-title">Comunicaciones</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
+                <i class="fas fa-phone mb-4"></i>
+                <h5 class="card-title">Telecom</h5>
+                <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p> -->
                 <a href="comunicaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
@@ -152,43 +153,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="col-lg-4 about-in mt-lg-4 text-center">
             <div class="card">
               <div class="card-body">
-                <i class="fas fa-key mb-4"></i>
-                <h5 class="card-title">Atualizacion de Firmware y SO</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 about-in mt-lg-4 text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-map-marker mb-4"></i>
-                <h5 class="card-title">Soporte Tecnico</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 about-in mt-lg-4 text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-key mb-4"></i>
-                <h5 class="card-title">Licenciamiento de Software</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 about-in mt-lg-4 text-center">
-            <div class="card">
-              <div class="card-body">
-                <i class="fas fa-building mb-4"></i>
+                <i class="fas fa-lock mb-4"></i>
                 <h5 class="card-title">Seguridad</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p>
-                <a href="instalaciones.html" class="btn btn-primary mt-3 details-button">Detalles</a>
+                <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p> -->
+                <a href="seguridad.html" class="btn btn-primary mt-3 details-button">Detalles</a>
               </div>
             </div>
           </div>
@@ -279,26 +247,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
   </script>
   <!-- //dropdown nav -->
-
-  <!-- password-script -->
-  <!-- <script>
-    window.onload = function () {
-      document.getElementById("password1").onchange = validatePassword;
-      document.getElementById("password2").onchange = validatePassword;
-    }
-
-    function validatePassword() {
-      var pass2 = document.getElementById("password2").value;
-      var pass1 = document.getElementById("password1").value;
-      if (pass1 != pass2)
-        document.getElementById("password2").setCustomValidity("Passwords Don't Match");
-      else
-        document.getElementById("password2").setCustomValidity('');
-      //empty string means no validation error
-    }
-
-  </script> -->
-  <!-- //password-script -->
 
   <!--/ start-smoth-scrolling -->
   <script src="js/move-top.js"></script>
