edited compromiso section

--- a/index.html
+++ b/index.html
@@ -98,10 +98,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
           </div>
           <div class="ban-text text-center py-3">
-            <p class="text-uppercase pb-2 text-white"> Lorem ipsum dolor sit amet consectetur elit
-              </h4>
-              <h5 class="ban-text">
-                Lorem ipsum dolor sit amet consectetur elit</h5>
+            <p class="text-uppercase pb-2 text-white"> Lorem ipsum dolor sit amet consectetur elit</p>
+            <h5 class="ban-text">Lorem ipsum dolor sit amet consectetur elit</h5>
           </div>
         </div>
       </div>
@@ -120,9 +118,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="advantage_left">
               <h4 class="mb-2">Consultoria IT</h4>
               <h3>Amplia variedad de Servicios</h3>
-              <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
-                at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
-                in, egestas vestibulum tellus.</p>
+              <p class="mt-2">
+                Hoy en día es muchas empresas solo buscan el comercializar productos y subcontratan a un tercero para dar el servicio. Genesys Informática comprometido con el Valor agregado, cuenta con una gran base de técnicos especializados y certificados para brindar un servicio especializado y directo para el gran abanico de soluciones que comercializamos.
+              </p>
             </div>
           </div>
           <div class="col-lg-6 advantage-grid-info1">
@@ -141,22 +139,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
           <div class="col-lg-6 advantage-grid-info pt-md-5">
             <div class="advantage_left">
-              <h4 class="mb-2">Preventivo y Reactivo</h4>
-              <h3>Soporte Tecnico Elite</h3>
-              <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
-                at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
-                in, egestas vestibulum tellus.</p>
+              <h4 class="mb-2">Capacitado y Certificado</h4>
+              <h3>El Equipo <u>más</u> Experimentado</h3>
+              <p class="mt-2">
+                Al contar con técnicos capacitados y certificados entendemos la importancia de tu proyecto y le asignamos el valor debido, acompañándote en todo el proceso de implementación. Siendo un aliado de valor para tu tranquilidad y confianza.
+              </p>
             </div>
           </div>
         </div>
         <div class="row middle-grids pt-lg-5">
           <div class="col-lg-6 advantage-grid-info pt-md-5">
             <div class="advantage_left">
-              <h4 class="mb-2">Capacitado y Certificado</h4>
-              <h3>El Equipo <u>más</u> Experimentado</h3>
-              <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
-                at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
-                in, egestas vestibulum tellus.</p>
+              <h4 class="mb-2">Preventivo y Reactivo</h4>
+              <h3>Soporte Tecnico Elite</h3>
+              <p class="mt-2">
+                  En nosotros encontraras un aliado para solucionar y prevenir incidentes, teniendo una base de técnicos capaces y preparados para resolver y detectar posibles situaciones que comprometan tu organización y el desempeño del área de TI.
+              </p>
             </div>
           </div>
           <div class="col-lg-6 advantage-grid-info1">
