--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
       <!-- /banner-info-->
       <div class="banner-content text-center text-white">
-        <h4 class="text-uppercase">IntelligencEvolved</h4>
+        <h4 class="text-uppercase">Intelligenc<span style="color: #5482ab">E</span>volved</h4>
         <h3>Experiencia en Soluciones Tecnologicas</h3>
 
         <div class="banner-high-lights text-center">
@@ -119,7 +119,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <h4 class="mb-2">Consultoria IT</h4>
               <h3>Amplia variedad de Servicios</h3>
               <p class="mt-2">
-                Hoy en día es muchas empresas solo buscan el comercializar productos y subcontratan a un tercero para dar el servicio. Genesys Informática comprometido con el Valor agregado, cuenta con una gran base de técnicos especializados y certificados para brindar un servicio especializado y directo para el gran abanico de soluciones que comercializamos.
+                Hoy en día es muchas empresas solo buscan el comercializar productos y subcontratan a un tercero para
+                dar el servicio. Genesys Informática comprometido con el Valor agregado, cuenta con una gran base de
+                técnicos especializados y certificados para brindar un servicio especializado y directo para el gran
+                abanico de soluciones que comercializamos.
               </p>
             </div>
           </div>
@@ -142,7 +145,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <h4 class="mb-2">Capacitado y Certificado</h4>
               <h3>El Equipo <u>más</u> Experimentado</h3>
               <p class="mt-2">
-                Al contar con técnicos capacitados y certificados entendemos la importancia de tu proyecto y le asignamos el valor debido, acompañándote en todo el proceso de implementación. Siendo un aliado de valor para tu tranquilidad y confianza.
+                Al contar con técnicos capacitados y certificados entendemos la importancia de tu proyecto y le
+                asignamos el valor debido, acompañándote en todo el proceso de implementación. Siendo un aliado de
+                valor para tu tranquilidad y confianza.
               </p>
             </div>
           </div>
@@ -153,7 +158,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <h4 class="mb-2">Preventivo y Reactivo</h4>
               <h3>Soporte Tecnico Elite</h3>
               <p class="mt-2">
-                  En nosotros encontraras un aliado para solucionar y prevenir incidentes, teniendo una base de técnicos capaces y preparados para resolver y detectar posibles situaciones que comprometan tu organización y el desempeño del área de TI.
+                En nosotros encontraras un aliado para solucionar y prevenir incidentes, teniendo una base de técnicos
+                capaces y preparados para resolver y detectar posibles situaciones que comprometan tu organización y el
+                desempeño del área de TI.
               </p>
             </div>
           </div>
