--- a/infraestructura.html
+++ b/infraestructura.html
@@ -201,14 +201,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 soporte, análisis de requerimientos y dimensionamiento de infraestructura central, consolidación y
                 virtualización de servicios (aplicaciones) en diferentes plataformas operativas.
               </p> -->
-              <ul class="ml-3 my-3">
+              <ul class="ml-3 my-3 infr-list">
                 <li>Disco: Soluciones tipo NAS o SAN, Virtualización de Alamcenamiento</li>
                 <li>Soluciones para Recuperación de Información: Cintas LTO, Librerías LTO y Librerias Virtuales (VTL)</li>
               </ul>
               <h4>
                 Servidores Integrados IBM Pure:
               </h4>
-              <ul class="ml-3 my-3">
+              <ul class="ml-3 my-3 infr-list">
                 <li>Soluciones integradas de HW, SW y Middleware (Pure Flex, Pure Application y Pure Data)</li>
               </ul>
 
@@ -226,6 +226,56 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
   </section>
   <!-- //Storage-->
+
+  <hr>
+
+  <!-- /Personal Computing -->
+  <section class="banner-bottom py-lg-5 py-md-5 py-3">
+    <div class="container">
+      <div class="inner-sec">
+
+        <div class="row middle-grids">
+
+          <div class="col-lg-3 advantage-grid-info1 d-flex">
+            <div class="text-center align-self-center">
+              <img src="./images/lenovo-laptop.png" class="img-fluid lenovo-bp" alt="IBM Pure Data">
+            </div>
+          </div>
+
+          <div class="col-lg-6 advantage-grid-info pt-md-3 mt-3">
+            <div class="advantage_left">
+              <!-- <h4 class="mb-2">SAI</h4> -->
+              <h3>Computo Personal</h3>
+              <hr>
+              <h4>Renovación tecnológica:</h4>
+              <p class="mt-2 pers-computing-p">
+                Genesys maneja las marcas más reconocidas Dell, Lenovo, y Apple en cómputo de la línea empresarial
+                como: Vostro, Latitud, ThinkPad, ThinkCentre, y MacBook Pro para tu empresa. <br>
+              </p>
+              <p class="mt-2 pers-computing-p">
+                Con servicios de carga de imagen y envió en toda la república y Centro de servicio Genesys te respalda
+                para eficientar tu proceso de renovación de computo. También facilitando propuestas de arrendamiento y
+                financiamiento.
+              </p>
+              <!-- <ul class="ml-3 my-3">
+                <li>Disco: Soluciones tipo NAS o SAN, Virtualización de Alamcenamiento</li>
+                <li>Soluciones para Recuperación de Información: Cintas LTO, Librerías LTO y Librerias Virtuales (VTL)</li>
+              </ul> -->
+
+            </div>
+          </div>
+          <div class="col-lg-3 advantage-grid-info1 d-flex">
+            <div class="text-center align-self-center">
+              <img src="./images/apple-laptop.png" class="img-fluid ibm-bp" alt="IBM Pure Flex">
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- //Personal Computing -->
 
   <!--/newsletter-->
   <footer class="newsletter_right pymd-5 py-4" id="footer">
